# guidellm-bench

./: .gitignore  PLAN.md  README.md  THROUGHPUT_PLAN.md  agent_iterations_reference.md  bench.py  c16_snippet.py.txt  cpu_serve.py  eagle3_patch.py  fix_dashboard_c16.py  install.sh  nohup.out  pyproject.toml  resume_1527.sh  server_status.json  test_agent_real_server.py  test_agent_sanity.py  verify_pc.py
.github/: copilot-instructions.md
guidellm_bench/: __init__.py  agent_bench.py  benchmark.py  config.py  dashboard.py  dataset.py  docker.py  host_gpu_monitor.py  monitor.py  server.py
guidellm_bench/agent/: __init__.py  constants.py  corpus.py  debug.py  helpers.py  matrix.py  run.py  scenarios.py
guidellm_results/20260302_1917/: Qwen_Qwen3-30B-A3B_tp4_quant-fp8_benchmarks.html  Qwen_Qwen3-30B-A3B_tp4_quant-fp8_benchmarks.json  Qwen_Qwen3-4B-Thinking-2507_tp2_quant-fp8_benchmarks.html  Qwen_Qwen3-4B-Thinking-2507_tp2_quant-fp8_benchmarks.json  Qwen_Qwen3-4B-Thinking-2507_tp4_quant-fp8_benchmarks.html  Qwen_Qwen3-4B-Thinking-2507_tp4_quant-fp8_benchmarks.json  dashboard.html  openai_gpt-oss-20b_tp4_quant-none_benchmarks.html  openai_gpt-oss-20b_tp4_quant-none_benchmarks.json  serve_Qwen_Qwen3-30B-A3B_tp4_quant-fp8_benchmarks.sh  serve_Qwen_Qwen3-4B-Thinking-2507_tp2_quant-fp8_benchmarks.sh  serve_Qwen_Qwen3-4B-Thinking-2507_tp4_quant-fp8_benchmarks.sh  serve_dashboard.sh  serve_openai_gpt-oss-20b_tp4_quant-none_benchmarks.sh
guidellm_sanity_results/20260302_1856/: Qwen_Qwen3-4B-Thinking-2507_tp4_quant-fp8_benchmarks.html  (+4 more)
verify_results/: verdict.txt
